tests/dupe-ty-var-val/out.txt
error: redefined identifier: 'a
  ┌─ err.sml:1:10
  │
1 │ val ('a, 'a) _: 'a list = []
  │          ^^

typechecking failed
